styles.css
*{
margin:0;
padding: 0;
font-family: 'poppins', sans-serif;
box-sizing: border-box;
text-decoration: none;
scroll-behavior: smooth;
list-style: none;
}
::-webkit-scrollbar{
    width: 20px;
}
::-webkit-scrollbar-track{
    background-color: rgb(219,219,219);
}
::-webkit-scrollbar-thumb{
     background:linear-gradient(to bottom,rgb(23,101,149),rgb(151,29,151));
}

header{
    position: fixed;
    top: 1rem;
    left: 50%;
    transform: translateX(-50%);
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 5rem;
    background-color: rgba(0,0,0,0.8);
    backdrop-filter: blur(4px);
    color: white;
    padding: 0.5rem 1.5rem;
    border-radius: 3rem;
    z-index: 1000;
}
.logo{
    color: white;
    font-size: 1.3rem;
    font-weight: 600;
    text-wrap: nowrap;
    transition: 0.3s ease-in-out;
}
.logo:hover{
    transform: scale(1.1);
}
.nav-links{
display: flex;
gap: 2rem;
}
li a{
    position: relative;
    color: white;
    font-weight: 300;
}
li a::before{
    position: absolute;
    content: '';
    width: 0;
    left: 0;
    height: 5px;
    top: 25px;
    border-radius: 1rem;
    transition: 0.3s ease-in-out;
    background: linear-gradient(to right, rgb(23, 101, 149), rgb(151, 29, 151));

}
li a:hover::before{
    width: 100%;
}
.visit-btn{
    padding: 0.8rem 1.5rem;
    border-radius: 3rem;
    border: none;
    font-weight: 500;
    font-size: 1rem;
    color: white;
    cursor: pointer;
    text-wrap: nowwrap;
    transition: 0.3s ease-in-out;
    background: linear-gradient(to right, rgb(23,101,149), rgb(151, 29, 151));
}
.visit-btn:hover{
    background: linear-gradient(to right, rgb(151, 29, 151), rgb(23,101,149));
    transform: scale(1.03);
}
#menu-icon{
    font-size: 2rem;
    display: none;
   
}

section{
    min-height: 100vh;
    padding: 8rem 12%;
    width: 100%;
    position: relative;
    background:linear-gradient(#fff5ff);
    background-attachment: fixed;
    background-size: cover;
    backdrop-filter: blur(10px);
}
.about{
    display: flex;
    align-items: center;
    justify-content: center;
}
.about .about-container{
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 10rem;
}
.about img{
    width: 25vw;
    border-radius: 100%;
}
.info-box{
    display: flex;
    flex-direction: column;
    text-align: center;
    align-items: center;
    justify-content: center;
    gap: 1.5rem;
}
.info-box h3{
font-size: 1.8rem;
font-weight: 500;
opacity: 0.8;
}
.info-box h1{
font-size: 3.5rem;
font-weight: 600;
}
.info-box span{
    background: linear-gradient(to right, rgb(151, 29, 151),rgb(23, 101, 149));
    background-clip: text;
    color: transparent;
    font-size: 2rem;
}
.btn-group{
    display: flex;
    gap: 1rem;
}
.btn{
    border-radius: 3rem;
    padding: 0.5rem 1.5rem;
    border: 2px solid black;
    cursor: pointer;
    font-weight: 500;
    text-wrap: nowrap;
    transition: 0.2s ease-in-out;
}
.btn:hover{
    background-color: black;
    color: white;
}
.socials{
    display: flex;
    gap: 2rem;
}
.socials i{
    font-size: 2.5rem;
    cursor: pointer;
    transition: 0.2 ease-in-out;
}
.socials i:hover{
    transform: scale(1.1);
}

.section-title{
    text-align: center;
    font-size: 4rem;
    font-weight: 600;
    margin-bottom: 3rem;
}
.skills-info{
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 5rem;
}

.grid{
    display: grid;
    grid-template-columns: repeat(3,1fr);
    gap: 2rem;
}
.grid-card{
    border: 2px solid black;
    border-radius: 3rem;
    padding: 3rem;
    display: flex;
    flex-direction: column;
    align-items: baseline;
    justify-content: left;
    cursor: pointer;
    transition: 0.2s ease-in-out;
}
.grid-card:hover{
    transform: scale(1.02);
    background-color: black;
    color: white;
}
.grid-card i{
    font-size: 1.5rem;
    margin-bottom: 1rem;
}
.grid-card span{
    font-size: 1.5rem;
    font-weight: 500;
    background: linear-gradient(to right,#009dff, #ff00ff);
    background-clip: text;
    color: transparent;
}

.project-grid{
    display: grid;
    grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
    gap: 2rem;
}
.project-card{
    padding: 3rem 2rem;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    text-align: center;
    gap: 1.5rem;
    border: 2px solid black;
    border-radius: 3rem;
    cursor: pointer;
    transition: 0.3s ease-in-out;
}
.project-card:hover{
    background-color: black;
    color: white;
    transform: translateY(10px) scale(1.02);
}
.project-card img{
    width: 20vw;
    border-radius: 1rem;
}
.project-card h3{
    font-size: 2rem;
    font-weight: 500;
}
.project-card h4{
    font-size: 1rem;
    font-weight: 300;
}
.blog-card{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding: 1.5rem 1rem;
    border: 2px solid black;
    border-radius: 1.5rem;
    text-align: center;
    color: black;
    cursor: pointer;
    transition: 0.3s ease-in-out;
}
    .blog-card:hover{
        background-color: black;
        color: white;
        transform: translateY(10px) scale(1.02);
}
.blog-card:hover .btn{
    border: 2px solid white;
    color: white;
}
.blog-card:hover .btn:hover{
    border: 2px solid white;
    background-color: white;
    color: black;
}
.blog-card img{
    width: 10vw;
    border-radius: 1rem;
}
.blog-card h3{
    font-size: 1.5rem;
    font-weight: 500;
    padding: 0.5rem 0;
}
.blog-card p{
    font-size: 1rem;
    font-weight: 300;
    padding: 0.5rem 0;
}
.form-container{
    width: 100%;
    justify-content: center;
    align-items: center;
    text-align: center:
    border-radius: 3rem;
    gap: 30px;
    margin-top: 2rem;
    padding: 1rem;
    font-size: 1rem;
    overflow-x: hidden;
}
.contact h2{
    text-align: center;
    margin-bottom: 15px;
    font-size: 4rem;
}
.form-container input,
.form-container textarea{
    display: block;
    justify-content: center;
    align-items: center;
    padding: 12px 15px;
    width: 100%;
    max-width: 500px;
    margin: 20px auto;
    margin-bottom: 35px;
    border: 2px solid black;
    border-radius: 8px;
    font-size: 16px;
    outline: none;
    resize: none;
    overfllow: hidden;
}
textarea{
    padding: 12px 10px;
    height: 150px;
    overflow-y: auto;
    resize: none;
    align-items: center;
}
button{
    justify-content: center;
    align-items: center;
    border: 2px solid black;
    background: white;
    border-radius: 3rem;
    padding: 0.5rem 1.5rem;
    cursor: pointer;
    font-weight: 500;
    text-wrap:nowrap;
    transition: 0.2s ease-in-out;
}
.error{
    color: red;
    font-size: 20px;
    margin-top: 1px;
}
.success{
    color: green;
    text-align: center;
    margin-top: 10px;
    font-size: 25px;
}
footer{
    bottom: 0;
    left: 0;
    height: 10rem;
    width: 100%;
    display: flex;
    flex-direction: column;
    gap: 1rem;
    align-items: center;
    justify-content: center;
    background: rgba(12, 12, 12, 0.8);
    color: white;
}
footer ul{
    display: flex;
    align-items: center;
    gap: 3rem;
}
footer ul li a{
color: white;
font-weight: 600;
}
.copyright{
    font-size: 300;
    margin-top: 2rem;
}
@media(max-width:1200px){
    header{
        padding: 1rem 2rem;
        gap: 2rem;
    }
    .about .about-container{
        gap: 3rem;
    }
    .skills-info{
        flex-direction: column;
    }
    .form-container{
        width: 100%;
        padding: 1rem 2rem;
    }
}
@media(max-width:768px){
    header{
        gap:1rem;
        padding: 1rem 1rem;
    }
    header.logo{
        font-size: 1rem;
    }
    .visit-btn{
        display: none;
    }
    .about-container{
        flex-direction: column;
    }
    .info-box h1{
        font-size: 3rem;
    }
    .section-title{
        font-size: 3rem;
    }
   .form-container{
       width: 100%;
       gap: 20px;
       padding: 1rem;
   }
    .form-container input,
    .form-container textarea{
        width: 50%;
        font-size: 15px;
    }
    .grid{
        grid-template-columns: repeat(1,1fr);
    }
}
@media(max-width:600px){
    header #menu-icon{
        display: block;
    }
    .nav-links{
        position: absolute;
        top: 100%; 
        margin-top: 1rem;
        width: 100%;
        padding: 1rem;
        color: white;
        display: flex;
        flex-direction: column;
        text-align: center;
        background: rgba(0, 0, 0, 2);
        border-radius: 3rem;
        display: none;

    }
    .nav-links li{
        margin-top: 1.5rem;
        padding: 1rem;
    }
    .nav-links.active{
        display: block;
    }
    header{
        padding: 1rem 5rem;
        gap: 3rem;
    }
    header .logo{
        font-size: 1.5rem;
    }
    .about-container img{
        width: 40vw;
    }
    .info-box h3{
        font-size: 1.5rem;
    }
    .info-box h1{
        font-size: 2.5rem;
    }
    .info-box span{
        font-size: 1.5rem
    }
    .section-title{
        font-size: 2.5rem;
    }
   .form-container{
       width: 100%;
       gap: 1px;
   }
    .form-container input,
    .form-container textarea{
        width: 70%;
        font-size: 14px;
        padding: 10px;
    }
    textarea{
        height: 120px;
    }
    .error{
        font-size: 14px;
    }
    .success{
        font-size: 18px;
    }
    footer ul{
        gap: 1rem;
    }
}

